# llama-server-manager

./: .editorconfig  .gitattributes  .gitignore  AUDIT_REPORT.md  CODE_SIGNING_POLICY.md  GUIDE.md  LICENSE  PRIVACY.md  README.md  eslint.config.mjs  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.browser-test.json  tsconfig.browser-test.node.json  vite.browser-test.config.ts  vite.config.ts
.codebase-memory/: artifact.json
.github/: rustsec-allowlist.json
.github/workflows/: build.yml  llama-upstream-watch.yml
browser-tests/: README.md  app-exit.spec.ts  config-page.spec.ts  model-repo.spec.ts  proxy-page.spec.ts  tauriMock.ts
docs/: DEPENDENCY_AUDIT.md  LLAMA_CPP_COMPATIBILITY.md  RELEASE_SIGNING.md  product-ui-refactor-plan.md
scripts/: check-browser-test-isolation.cjs  check-cluster-theme.mjs  check-component-budgets.cjs  check-component-i18n.cjs  check-cross-platform-release.cjs  check-download-theme.mjs  check-encoding.mjs  check-guide.cjs  check-ipc-boundary.cjs  check-llama-upstream.cjs  check-monitoring-theme.mjs  check-react-hooks.cjs  check-rustsec-allowlist.cjs  llama-parameter-baseline.json  test-audit-remediations.cjs  test-bootstrap-health.cjs  test-config-parameter-review.cjs  test-config-save-sequencing.cjs  test-cross-platform-paths.cjs  test-download-restore-merge.cjs  test-engine-capabilities.cjs  test-instance-lifecycle-coordinator.cjs  test-live-throughput.cjs  test-llama-parameter-alignment.cjs  test-parameter-catalog.cjs  test-parameter-intent.cjs  test-redownload-sequencing.cjs  test-release-tag-version.cjs  test-runtime-service.cjs  test-speculative-decoding.cjs  test-vector-model-policy.cjs  test-vector-performance.cjs
src/: App.tsx  engineCapabilities.ts  index.css  modelPolicy.ts  modelProjector.ts  parameterCatalog.ts  parameterIntent.ts  store.ts  validators.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  main.rs  models.rs  persistence.rs  security.rs  utils.rs  vector_policy.rs
src-tauri/src/commands/: adlx.rs  autostart.rs  cluster.rs  cluster_mdns.rs  cluster_network.rs  cluster_ssh.rs  config.rs  download.rs  engine_capabilities.rs  history.rs  mod.rs  model_inventory.rs  monitoring.rs  nvml.rs  proxy.rs  scanner.rs  server.rs  telemetry.rs  vector_metrics.rs
src-tauri/src/runtime_service/: autostart.rs  mod.rs  protocol.rs  supervisor.rs  transport.rs
src/components/: APIConfig.tsx  AdvancedConfig.tsx  BigScreenPage.tsx  ConfigPage.tsx  DownloadManager.tsx  EngineManager.tsx  GenerationConfig.tsx  GuidePage.tsx  InstanceManager.tsx  LogsViewer.tsx  ModelConfig.tsx  ModelRepo.tsx  PerformanceConfig.tsx  ProxyPage.tsx  ui.tsx
(+78 files in other folders)
