[package]
name = "llama-server-manager"
version = "2.9.18"
description = "现代化 Llama.cpp 服务器图形化管理器"
authors = ["开发者"]
license = "MIT"
edition = "2021"
rust-version = "1.75"

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
tauri = { version = "2.11", features = ["tray-icon"] }
tauri-plugin-dialog = "2.7"
tauri-plugin-shell = "2.3"
tauri-plugin-single-instance = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["v4", "serde"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util", "fs", "process"] }
reqwest = { version = "0.11", features = ["json", "stream", "blocking"] }
walkdir = "2.0"
bytes = "1.0"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }
sysinfo = "0.32"
libloading = "0.8"
chrono = { version = "0.4", features = ["serde"] }
regex-lite = "0.1"
if-addrs = "0.13"
socket2 = "0.5"
mdns-sd = "0.11"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
codegen-units = 1
strip = true
